# iri-facility-api-python

./: .gitignore  Dockerfile  Makefile  README.md  VALIDATION.MD  local-template.env  pyproject.toml
.github/workflows/: api-validation.yml
app/: apilogger.py  config.py  demo_adapter.py  idempotency.py  main.py  request_context.py
app/routers/: error_handlers.py  iri_router.py
app/routers/account/: models.py
app/routers/compute/: compute.py  models.py
app/routers/filesystem/: filesystem.py  models.py
app/routers/status/: facility_adapter.py  models.py  status.py
app/routers/storage/: facility_adapter.py  models.py  storage.py
app/s3df/: __init__.py  account_adapter.py  compute_adapter.py  config.py  facility_adapter.py  filesystem_adapter.py  status_adapter.py  status_registry.py  task_adapter.py
app/s3df/auth/: jwt_verifier.py
app/s3df/clients/: __init__.py  coact.py  fs_facade.py  s3df_status_api.py  user_lookup.py
app/s3df/slurm/: test_slurmrestd.py
app/s3df/status/: __init__.py  config.py  health_checker.py  poller.py  store.py
app/s3df/tests/: test_compute_adapter.py  test_filesystem_adapter.py  test_status_adapter.py  test_status_registry.py  test_user_lookup.py
app/types/: models.py  scalars.py
design-docs/: coact-user-impersonation.md  debug-facility-nersc.md  s3df-status-adapter-alternatives.md  s3df-status-adapter.md  upstream-v2-merge-remaining-migrations.md  upstream-v2-rebase-plan.md
test/: test_facility_project_header.py  test_filesystem.py  test_proxy_prefix_urls.py  test_storage.py  test_urn_types.py
tools/: README.md  facility_notebook_smoke.py  ping.py
