[project]
name = "iri-api-python"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "opentelemetry-api>=1.39.1,<1.40.0",
    "opentelemetry-sdk>=1.39.1,<1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1,<0.61b0",
    "opentelemetry-exporter-otlp>=1.39.1,<1.40.0",
    "globus-sdk>=4.3.1",
    "typer>=0.24.1",
    "humps>=0.2.2",
    "gql[httpx]>=3.5.0",
    "pyjwt[crypto]>=2.8.0",
    "slurmrestd-client>=1.0.0",
    "redis>=7.2.0,<8.0.0",
]

[tool.uv.sources]
slurmrestd-client = { path = "app/s3df/slurm/slurmrestd_client-1.0.0-py3-none-any.whl" }

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 200
exclude = [".venv", "__pycache__", "build", "dist"]
